# dataqualitychecker

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ExampleUsage.py  LICENSE  Makefile  README.md  Readme.md  checker.py  data_quality_results.json  install.ps1  install.sh  pyproject.toml  results.json  setup.py  test2.py
.github/workflows/: ci.yml  release.yml
cleanpy.egg-info/: PKG-INFO  SOURCES.txt
data_quality_checker/: checker.py
data_quality_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datacleaner.egg-info/: PKG-INFO  SOURCES.txt
dataguard.egg-info/: PKG-INFO  SOURCES.txt
deploy/: iam-policy.json
deploy/terraform/: main.tf  outputs.tf  variables.tf
docker/: Dockerfile  Dockerfile.lambda  docker-compose.yml
docs/: ARCHITECTURE.md  DEEP_DIVE.md  DEPLOY.md  LINKING.md  MIGRATION.md  RUST_CONVERSION.md
examples/: basic.py  bedrock_report.py  config.yaml  ollama_report.py  sample.csv
scripts/: bench_checker.py  bench_linking.py
src/datapilot/: __init__.py  checker.py  cli.py  lakehouse.py  lambda_handler.py  logging_setup.py
src/datapilot/checks/: __init__.py  base.py  cardinality.py  duplicates.py  freshness.py  linkage.py  missing.py  outliers.py  ranges.py  types.py
src/datapilot/engines/: __init__.py  base.py  cudf_engine.py  dask_engine.py  duckdb_engine.py  pandas_engine.py  polars_engine.py  spark_engine.py
src/datapilot/linking/: __init__.py  blocking.py  cluster.py  comparisons.py  config.py  duckdb_linker.py  em.py  linker.py
src/datapilot/llm/: __init__.py  base.py  bedrock.py  null_provider.py  ollama.py  openai_compat.py
src/datapilot/models/: config.py  results.py
src/datapilot/reporting/: __init__.py  html.py  markdown.py
src/qualipilot/: __init__.py  __main__.py  checker.py  cli.py  lakehouse.py  lambda_handler.py  logging_setup.py
src/qualipilot/checks/: __init__.py  base.py  cardinality.py  duplicates.py  freshness.py  linkage.py  missing.py  outliers.py  ranges.py  types.py
src/qualipilot/engines/: __init__.py  cudf_engine.py  dask_engine.py  duckdb_engine.py  pandas_engine.py  polars_engine.py  spark_engine.py
src/qualipilot/linking/: __init__.py  cluster.py  comparisons.py  config.py  duckdb_linker.py  em.py  linker.py
src/qualipilot/llm/: __init__.py  bedrock.py  null_provider.py  ollama.py  openai_compat.py
src/qualipilot/models/: __init__.py  config.py  results.py
src/qualipilot/reporting/: __init__.py  html.py  markdown.py
tests/: conftest.py  test_checker.py  test_checks.py  test_cli.py  test_duckdb_engine.py  test_engines.py  test_linking.py  test_llm.py  test_reporting.py
tests/property/: test_properties.py
