[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qualipilot"
version = "2.0.0"
description = "Production-grade data quality checks with pluggable LLM reporting (AWS Bedrock, Ollama, OpenAI-compatible)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sarvesh Ganesan", email = "sarveshganesan99@gmail.com" },
]
keywords = [
    "data-quality",
    "data-validation",
    "bedrock",
    "ollama",
    "polars",
    "pandas",
    "dask",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.12",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.8",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35", "botocore>=1.35"]
dask = ["dask[dataframe]>=2024.8"]
ollama = []
openai = ["openai>=1.50"]
viz = ["matplotlib>=3.9"]
linking = ["rapidfuzz>=3.9", "numpy>=2.0"]
duckdb = ["duckdb>=1.5"]
spark = ["pyspark>=3.5"]
iceberg = ["pyiceberg>=0.9", "pyarrow>=17"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "moto>=5.0",
    "pre-commit>=3.8",
    "types-PyYAML",
]
all = [
    "boto3>=1.35",
    "botocore>=1.35",
    "dask[dataframe]>=2024.8",
    "openai>=1.50",
    "matplotlib>=3.9",
    "rapidfuzz>=3.9",
    "numpy>=2.0",
    "duckdb>=1.5",
    "pyiceberg>=0.9",
]

[project.urls]
Homepage = "https://github.com/Sarvesh-GanesanW/dataqualitychecker"
Repository = "https://github.com/Sarvesh-GanesanW/dataqualitychecker"
Issues = "https://github.com/Sarvesh-GanesanW/dataqualitychecker/issues"

[project.scripts]
qualipilot = "qualipilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/qualipilot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/qualipilot",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "PL",
    "RUF",
    "ASYNC",
    "PT",
    "RET",
    "TID",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "PLC0415",
    "PLR0911",
    "N812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = false
ignore_missing_imports = true
files = ["src/qualipilot"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["qualipilot.cli"]
# StrEnum.value narrowness varies between mypy versions; the casts
# guard the older path and look redundant on the newer one. Either way
# the runtime types are correct.
warn_unused_ignores = false
disable_error_code = ["redundant-cast"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=qualipilot",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits external services (skipped by default)",
    "slow: slow tests",
]

[tool.coverage.run]
branch = true
source = ["qualipilot"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
